--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>groupId</groupId>
     <artifactId>myzone</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
 
-    
+
+    </dependencies>
+
+
 </project>
